# OpenGL_rust_cpp

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-opengl  bazel-out  bazel-testlogs  custom_rule.bzl  input_file.txt
dependencies/glfw/: BUILD.bazel
src/: BUILD.bazel  main.cpp  main.rs
