cc_binary(
    name = "opengl",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//dependencies/glfw:glfw",
    ],
    includes = [
        "../dependencies/glfw/include",
    ],
)

rust_binary(
    name       = "opengl_rust",
    srcs       = ["main.rs"],
    edition    = "2021",
    deps       = [
        "//dependencies/glfw:glfw",
    ],
    visibility = ["//visibility:public"],
)